--- a/linuxdistros-desktop-server.html
+++ b/linuxdistros-desktop-server.html
@@ -32,16 +32,18 @@
           <p><a href="https://www.debian.org/">Debian</a> provides more than a pure OS: it comes with over 43000 packages, precompiled software bundled up in a nice format for easy installation on your machine.</p>
           <br /><br />          
           <p><a href="https://getfedora.org/">Fedora</a> is a Linux distribution developed by the community-supported Fedora Project and owned by <a href="http://www.redhat.com/">Red Hat</a>. Fedora contains software distributed under a free and open-source license and aims to be on the leading edge of such technologies. Fedora has a reputation for focusing on innovation, integrating new technologies early on and working closely with upstream Linux communities.</p>
-	  		 <br /><br />
-	  		 <p><a href="https://www.gentoo.org/">Gentoo</a> is a flexible, source-based Linux distribution that becomes just about any system you need—and much more.</p>
-	  		 <br /><br />
-	  		 <p><a href="http://www.pclinuxos.com/">PCLinuxOS</a> is a free easy to use Linux-based Operating System for x86 and x86_64 desktops or laptops.</p>
-	  		 <br /><br />
-	  		 <p><a href="https://www.opensuse.org/">openSUSE</a> creates one of the world's best Linux distributions, working together in an open, transparent and friendly manner as part of the worldwide Free and Open Source Software community.</p>
-	  		 <br /><br />
-	  		 <p><a href="http://www.slackware.com/">Slackware Linux</a> by Patrick Volkerding is an advanced Linux operating system, designed with the twin goals of ease of use and stability as top priorities. Including the latest popular software while retaining a sense of tradition, providing simplicity and ease of use alongside flexibility and power, Slackware brings the best of all worlds to the table.</p>
-	       <br /><br />
-	       <p><a href="http://www.ubuntu.com/">Ubuntu</a> is a complete desktop Linux operating system, freely available with both community and professional support.</p>
+          <br /><br />
+          <p><a href="https://www.gentoo.org/">Gentoo</a> is a flexible, source-based Linux distribution that becomes just about any system you need—and much more.</p>
+          <br /><br />
+          <p><a href="https://neon.kde.org/">KDE neon</a> is the latest and greatest from the KDE community but the safety and stability of a Long Term Support (uses the foundation of the latest Ubuntu LTS) release. When you don't want to worry about strange core mechanics and just get things done with the latest features. When you want your computer as your tool, something that belongs to you, that you can trust and that delivers day after day, week after week, year after year.</p>
+          <br /><br />
+          <p><a href="https://www.opensuse.org/">openSUSE</a> creates one of the world's best Linux distributions, working together in an open, transparent and friendly manner as part of the worldwide Free and Open Source Software community.</p>
+          <br /><br />
+          <p><a href="http://www.pclinuxos.com/">PCLinuxOS</a> is a free easy to use Linux-based Operating System for x86 and x86_64 desktops or laptops.</p>
+          <br /><br />
+          <p><a href="http://www.slackware.com/">Slackware Linux</a> by Patrick Volkerding is an advanced Linux operating system, designed with the twin goals of ease of use and stability as top priorities. Including the latest popular software while retaining a sense of tradition, providing simplicity and ease of use alongside flexibility and power, Slackware brings the best of all worlds to the table.</p>
+          <br /><br />
+          <p><a href="http://www.ubuntu.com/">Ubuntu</a> is a complete desktop Linux operating system, freely available with both community and professional support.</p>
 	  <br />
 	  
 
