--- a/bsd-flavors.html
+++ b/bsd-flavors.html
@@ -21,7 +21,7 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>BSD Flavors (13):</h3>
+          <h3>BSD Flavors (14):</h3>
           <br />
           <p><a href="http://bsdrp.net/">BSD Router Project</a> (BSDRP) is an embedded free and open source router distribution based on FreeBSD with Quagga and Bird.</p>
 <br /><br />
@@ -55,6 +55,8 @@
 	  user. Whether you need quick access to e-mail or a free and Open Source gaming system, PC-BSD is the desktop for you!</p>
 <br /><br />
 	  <p><a href="https://www.pfsense.org/">pfSense</a> is an open source firewall/router computer software distribution based on FreeBSD.</p>
+	  <br /><br />
+	  <p><a href="https://www.trueos.org/">TrueOS</a> (based of FreeBSD) is designed from the ground up for ease of use. All the packages needed for a fully functional desktop are included out of the box, and the graphical installer makes it simple to set up a new TrueOS® installation. </p>
 
 
           
