added new links

--- a/intermodal.html
+++ b/intermodal.html
@@ -21,19 +21,19 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Drayage, Intermodal, Maritime, and Transportation (77):</h3>
+          <h3>Drayage, Intermodal, Maritime, and Transportation (82):</h3>
           <ul>
           <li><a href="intermodal.html#Associations">Associations</a> (4)</li>
           <li><a href="intermodal.html#Blogs">Blogs and News</a> (2)</li>
           <li><a href="intermodal.html#Docs">Documents, eBooks, Informational Resources</a> (1)</li>
           <li><a href="intermodal.html#Biz">Forming Your Indiana Trucking Business</a> (3)</li>
-          <li><a href="intermodal.html#HazMat">Hazardous Material and Tanker Study Guides</a> (5)</li>
+          <li><a href="intermodal.html#HazMat">Hazardous Material and Tanker Study Guides</a> (7)</li>
           <li><a href="intermodal.html#Magazines">Magazines</a> (14)</li>
           <li><a href="intermodal.html#Ocean">Ocean Freight Companies</a> (9)</li>
           <li><a href="intermodal.html#Railroads">Railroads</a> (7)</li>
           <li><a href="intermodal.html#Software">Software</a> (4)</li>
-          <li><a href="intermodal.html#Classifieds">Truck Classifieds and Dealers</a> (12)</li> 
-          <li><a href="intermodal.html#GOV">US Government Sites</a> (5)</li>
+          <li><a href="intermodal.html#Classifieds">Truck Classifieds and Dealers</a> (14)</li> 
+          <li><a href="intermodal.html#GOV">US Government Sites</a> (6)</li>
           <li><a href="intermodal.html#Drayage">US Midwest Drayage Companies</a> (11)</li>
           </ul>
           
@@ -69,8 +69,10 @@
 	  
 	  <br /><br /><br /><br />
 	  
-	  <h3><a id="HazMat">Hazardous Material and Tanker Study Guides (5):</h3>
+	  <h3><a id="HazMat">Hazardous Material and Tanker Study Guides (7):</h3>
 	  <p>CDL Career Now <a href="https://www.cdlcareernow.com/cdl-practice-tests.php">https://www.cdlcareernow.com/cdl-practice-tests.php</a></p>
+	  <p>CDL Study Buddy <a href="http://cdlstudybuddy.com/">http://cdlstudybuddy.com/</a></p>
+	  <p>CDLTEST.com <a href="http://cdltest.co/">http://cdltest.co/</a></p>
 	  <p>Driving-Tests.org <a href="http://driving-tests.org/indiana/">http://driving-tests.org/indiana/</a> 12 CDL Tests</p>
 	  <p>Trucker Country <a href="http://www.truckercountry.com/cdl-practice-tests/">http://www.truckercountry.com/cdl-practice-tests/</a></p>
 	  <p>Truckers Report <a href="http://www.thetruckersreport.com/cdl-practice-tests/">http://www.thetruckersreport.com/cdl-practice-tests/</a></p>
@@ -132,11 +134,13 @@
 	  
 	  <br /><br /><br /><br />
 	  
-	  <h3><a id="Classifieds">Truck Classifieds and Dealers (12):</h3>
+	  <h3><a id="Classifieds">Truck Classifieds and Dealers (14):</h3>
+	  <p>Arrow Truck Sales <a href="http://www.arrowtruck.com/">http://www.arrowtruck.com/</a></p>
 	  <p>Commercial Truck Trader <a href="http://www.commercialtrucktrader.com/">http://www.commercialtrucktrader.com/</a></p>
 	  <p>House of Trucks <a href="http://hottrucks.com/">http://hottrucks.com/</a></p>
 	  <p>Idealease <a href="http://www.idealeaseusedtrucks.com/">http://www.idealeaseusedtrucks.com/</a></p>
 	  <p>International Used Trucks <a href="http://www.internationalusedtrucks.com/">http://www.internationalusedtrucks.com/</a></p>
+	  <p>M&amp;K Truck Centers <a href="http://www.mktruckcenters.com/">http://www.mktruckcenters.com/</a></p>
 	  <p>NationaLease <a href="http://www.nationalease.com/used-trucks/">http://www.nationalease.com/used-trucks/</a></p>
 	  <p>Penske <a href="https://www.penskeusedtrucks.com/">https://www.penskeusedtrucks.com/</a></p>
 	  <p>Rush Truck Centers <a href="http://www.rushtruckcenters.com/">http://www.rushtruckcenters.com/</a></p>
@@ -148,11 +152,12 @@
 	  
 	  <br /><br /><br /><br />
 	  
-	  <h3><a id="GOV">US Government Sites (5):</h3>
+	  <h3><a id="GOV">US Government Sites (6):</h3>
 	  <p>Commercial Driver License Manual <a href="http://www.in.gov/bmv/files/CDL_Manual.pdf">http://www.in.gov/bmv/files/CDL_Manual.pdf</a> pdf</p>
 	  <p>Commercial Motor Vehicle Guidebook <a href="http://www.in.gov/dor/files/cmvg.pdf">http://www.in.gov/dor/files/cmvg.pdf</a> pdf</p>
 	  <p>FMCSA - Fed. Motor Carrier Safety Admin. <a href="https://www.fmcsa.dot.gov/">https://www.fmcsa.dot.gov/</a></p>
 	  <p>Indiana BMV <a href="http://www.in.gov/bmv/index.htm">http://www.in.gov/bmv/index.htm</a></p>
+	  <p>TSA <a href="https://www.tsa.gov/">https://www.tsa.gov/</a></p>
 	  <p>US DOT <a href="https://www.transportation.gov/">https://www.transportation.gov/</a></p>
 	  
 	  <br /><br /><br /><br />
