--- a/intermodal.html
+++ b/intermodal.html
@@ -21,13 +21,13 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Drayage, Intermodal, Maritime, and Transportation (82):</h3>
+          <h3>Drayage, Intermodal, Maritime, and Transportation (83):</h3>
           <ul>
           <li><a href="intermodal.html#Associations">Associations</a> (4)</li>
           <li><a href="intermodal.html#Blogs">Blogs and News</a> (2)</li>
           <li><a href="intermodal.html#Docs">Documents, eBooks, Informational Resources</a> (1)</li>
           <li><a href="intermodal.html#Biz">Forming Your Indiana Trucking Business</a> (3)</li>
-          <li><a href="intermodal.html#HazMat">Hazardous Material and Tanker Study Guides</a> (7)</li>
+          <li><a href="intermodal.html#HazMat">Hazardous Material and Tanker Study Guides</a> (8)</li>
           <li><a href="intermodal.html#Magazines">Magazines</a> (14)</li>
           <li><a href="intermodal.html#Ocean">Ocean Freight Companies</a> (9)</li>
           <li><a href="intermodal.html#Railroads">Railroads</a> (7)</li>
@@ -69,7 +69,7 @@
 	  
 	  <br /><br /><br /><br />
 	  
-	  <h3><a id="HazMat">Hazardous Material and Tanker Study Guides (7):</h3>
+	  <h3><a id="HazMat">Hazardous Material and Tanker Study Guides (8):</h3>
 	  <p>CDL Career Now <a href="https://www.cdlcareernow.com/cdl-practice-tests.php">https://www.cdlcareernow.com/cdl-practice-tests.php</a></p>
 	  <p>CDL Study Buddy <a href="http://cdlstudybuddy.com/">http://cdlstudybuddy.com/</a></p>
 	  <p>CDLTEST.com <a href="http://cdltest.co/">http://cdltest.co/</a></p>
@@ -77,6 +77,7 @@
 	  <p>Trucker Country <a href="http://www.truckercountry.com/cdl-practice-tests/">http://www.truckercountry.com/cdl-practice-tests/</a></p>
 	  <p>Truckers Report <a href="http://www.thetruckersreport.com/cdl-practice-tests/">http://www.thetruckersreport.com/cdl-practice-tests/</a></p>
 	  <p>TruckingTruth <a href="http://www.truckingtruth.com/cdl-test/">http://www.truckingtruth.com/cdl-test/</a></p>
+	  <p>Union Test Prep <a href="https://uniontestprep.com/cdl">https://uniontestprep.com/cdl</a></p>
 	  
 	  <br /><br /><br /><br />
         
