--- a/ocp/friends.html
+++ b/ocp/friends.html
@@ -37,7 +37,7 @@
 	  IRC on freenode #LinuxLUGCast. We also have a Google Plus Community site and a mail list, visit our website for the direct links.</li>
 
 
-	  <li><a href="https://monsterb.github.io">monsterb | daemons, gnus, and penguins. Oh my!</a> is a link portal dedicated to BSD, Cyber Security, Emulation, Ethical Hacking, FOSS, GNU, Hot Rods, illumos, Kentucky Bourbon, Information Security, Infosec, IT Security, Linux, Podcasting, Programming, Oggcasting, OpenSource, Rat Rods, Scripting, T-Buckets, Unix, and Video Games.</li>
+	  <li><a href="https://monsterb.github.io">monsterb | daemons, gnus, and penguins. Oh my!</a> is a link portal dedicated to BSD, Cyber Security, Emulation, Ethical Hacking, FOSS, GNU, illumos, Information Security, Infosec, IT Security, Linux, Podcasting, Programming, Oggcasting, OpenSource, Scripting, Unix, and Video Games.</li>
 	  
 	  
 	  <li><a href="https://wiki.xiph.org/VorbisCasts">Xiph Wiki</a>: In an effort to bring open-source ideals to the world of multimedia, the <a href="http://xiph.org/">Xiph.Org Foundation</a> develops a multitude of amazing products. This wiki describes our free and open protocols and software.</li>
