--- a/podcasts.html
+++ b/podcasts.html
@@ -21,12 +21,12 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Netcasts, Oggcasts, Podcasts, Webcasts (100):</h3>
+          <h3>Netcasts, Oggcasts, Podcasts, Webcasts (101):</h3>
           <br />
           <ul>
           <li><a href="podcasts.html#Automotive">Automotive, Auto Racing, Auto Repair</a> (4)</li>
           <li><a href="podcasts.html#BSD">BSD</a> (3)</li>
-          <li><a href="podcasts.html#Comedy">Comedy</a> (6)</li>
+          <li><a href="podcasts.html#Comedy">Comedy</a> (7)</li>
           <li><a href="podcasts.html#CyberSecurity">Cyber Security, Forensics, Hacking, InfoSec, PenTesting</a> (24)</li>
           <li><a href="podcasts.html#FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (9)</li>
           <li><a href="podcasts.html#Linux">GNU/Linux</a> (25)</li>
@@ -54,8 +54,9 @@
           
           <br /><br /><br /><br />
           
-          <h3><a id="Comedy">Comedy</a> (6):</h3>
+          <h3><a id="Comedy">Comedy</a> (7):</h3>
           <p>The Adam Carolla Show <a href="http://adamcarolla.com/">http://adamcarolla.com/</a> <a href="http://theadamcarollashow.libsyn.com/rss">rss feed</a></p>
+          <p>BarneStorming with Priscilla Barnes <a href="https://www.spreaker.com/show/barnestorming">https://www.spreaker.com/show/barnestorming</a> <a href="http://www.spreaker.com/show/2093070/episodes/feed">rss feed</a></p>
           <p>The Church of What's Happening Now with Joey Coco Diaz <a href="http://thechurchofwhatshappeningnow.libsyn.com/">http://thechurchofwhatshappeningnow.libsyn.com/</a> <a href="http://thechurchofwhatshappeningnow.libsyn.com/rss">rss feed</a></p>
           <p>Come to Papa with Tom Papa <a href="http://tompapa.com/">http://tompapa.com/</a> <a href="http://feeds.feedburner.com/soundcloud/CTP">rss feed</a></p>
           <p>Doug Loves Movies <a href="http://douglovesmovies.com/">http://douglovesmovies.com/</a> <a href="http://feeds.feedburner.com/DougLovesMovies">rss feed</a></p>
