--- a/intermodal.html
+++ b/intermodal.html
@@ -21,19 +21,19 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Drayage, Intermodal, Maritime, and Transportation (83):</h3>
+          <h3>Drayage, Intermodal, Maritime, and Transportation (88):</h3>
           <ul>
           <li><a href="intermodal.html#Associations">Associations</a> (4)</li>
-          <li><a href="intermodal.html#Blogs">Blogs and News</a> (2)</li>
-          <li><a href="intermodal.html#Docs">Documents, eBooks, Informational Resources</a> (1)</li>
+          <li><a href="intermodal.html#Blogs">Blogs and News</a> (4)</li>
+          <li><a href="intermodal.html#Docs">Documents, eBooks, Informational Resources</a> (4)</li>
           <li><a href="intermodal.html#Biz">Forming Your Indiana Trucking Business</a> (3)</li>
           <li><a href="intermodal.html#HazMat">Hazardous Material and Tanker Study Guides</a> (8)</li>
-          <li><a href="intermodal.html#Magazines">Magazines</a> (14)</li>
+          <li><a href="intermodal.html#Magazines">Magazines</a> (16)</li>
           <li><a href="intermodal.html#Ocean">Ocean Freight Companies</a> (9)</li>
           <li><a href="intermodal.html#Railroads">Railroads</a> (7)</li>
           <li><a href="intermodal.html#Software">Software</a> (4)</li>
           <li><a href="intermodal.html#Classifieds">Truck Classifieds and Dealers</a> (14)</li> 
-          <li><a href="intermodal.html#GOV">US Government Sites</a> (6)</li>
+          <li><a href="intermodal.html#GOV">US Government Sites</a> (4)</li>
           <li><a href="intermodal.html#Drayage">US Midwest Drayage Companies</a> (11)</li>
           </ul>
           
@@ -47,24 +47,26 @@
 	  
 	  <br /><br /><br /><br />
 	  
-	  <h3><a id="Blogs">Blogs and News (2):</h3>
+	  <h3><a id="Blogs">Blogs and News (4):</h3>
 	  <p>American Shipper <a href="http://www.americanshipper.com/">http://www.americanshipper.com/</a></p>
+	  <p>LiveTrucking.com <a href="http://www.livetrucking.com/">http://www.livetrucking.com/</a></p>
 	  <p>Supply Chain 24/7 <a href="http://www.supplychain247.com/">http://www.supplychain247.com/</a></p>
+	  <p>The Trucker.com <a href="http://www.thetrucker.com/">http://www.thetrucker.com/</a></p>
 	  
 	  <br /><br /><br /><br />
 	  
-	  <h3><a id="Docs">Documents, eBooks, Informational Resources (1):</h3>
-	  <br/>
+	  <h3><a id="Docs">Documents, eBooks, Informational Resources (4):</h3>
+	  <p>9 Classes of Hazardous Materials (Yellow Visor Card) <a href="docs/Nine_Classes_of_Hazardous_Materials-4-2013_508CLN.pdf">pdf</a></p>
+	  <p>Emergency Reponse Guidebook 2016 <a href="docs/ERG2016.pdf">pdf</a></p>
+	  <p>Indiana CDL Manual <a href="docs/INDIANA_CDL_Manual_July2014l.pdf">pdf</a></p>
+      <p>Indiana Motor Vehicle Guidebook <a href="docs/IndianaCommercialMotorVehicleGuidebook.pdf">pdf</a></p>
 	  <p>Intermodal Agent Guide v2.02 by The Evans Network of Companies <a href="docs/EvansDeliveryAgentGuideBookVer2_02.pdf">pdf</a></p>
 	  
 	  <br /><br /><br /><br />
 	  
 	  <h3><a id="Biz">Forming Your Indiana Trucking Business (3):</h3>
-	  <br />
 	  <p><a href="http://www.in.gov/sos/business/2428.htm">AN ENTREPRENEUR'S GUIDE TO STARTING A BUSINESS IN INDIANA</a> by Connie Lawson (Indiana Secretary of State).</p>
-	  <br />
 	  <p><a href="https://howtostartanllc.com/indiana-llc">Form an LLC in Indiana</a> by The Really Useful Information Company (TRUIC).</p>
-	  <br />
 	  <p><a href="http://www.wikihow.com/Form-an-LLC-in-Indiana">wikiHOW</a> Form an LLC in Indiana</p>
 	  
 	  <br /><br /><br /><br />
@@ -81,7 +83,7 @@
 	  
 	  <br /><br /><br /><br />
         
-	  <h3><a id="Magazines">Magazines (14):</h3>
+	  <h3><a id="Magazines">Magazines (16):</h3>
 	  <p>10-4 Magazine <a href="http://www.tenfourmagazine.com/">http://www.tenfourmagazine.com/</a></p>
 	  <p>American Trucker <a href="http://trucker.com/">http://trucker.com/</a></p>
 	  <p>Fleet Owner <a href="http://fleetowner.com/">http://fleetowner.com/</a></p>
@@ -94,6 +96,8 @@
 	  <p>Movin' Out <a href="http://www.movinout.com/">http://www.movinout.com/</a>
 	  <p>Overdrive <a href="http://www.overdriveonline.com/">http://www.overdriveonline.com/</a></p>
 	  <p>Progressive Railroading <a href="http://www.progressiverailroading.com/">http://www.progressiverailroading.com/</a></p>
+	  <p>RailwayAge <a href="http://www.railwayage.com/">http://www.railwayage.com/</a></p>
+	  <p>Railway Track &amp; Structures <a href="http://www.rtands.com/">http://www.rtands.com/</a></p>
 	  <p>RoadKing <a href="http://www.roadking.com/">http://www.roadking.com/</a></p>
 	  <p>Trucker Magazine <a href="http://truckermagazine.com/">http://truckermagazine.com/</a></p>
 	  
@@ -153,9 +157,7 @@
 	  
 	  <br /><br /><br /><br />
 	  
-	  <h3><a id="GOV">US Government Sites (6):</h3>
-	  <p>Commercial Driver License Manual <a href="http://www.in.gov/bmv/files/CDL_Manual.pdf">http://www.in.gov/bmv/files/CDL_Manual.pdf</a> pdf</p>
-	  <p>Commercial Motor Vehicle Guidebook <a href="http://www.in.gov/dor/files/cmvg.pdf">http://www.in.gov/dor/files/cmvg.pdf</a> pdf</p>
+	  <h3><a id="GOV">US Government Sites (4):</h3>
 	  <p>FMCSA - Fed. Motor Carrier Safety Admin. <a href="https://www.fmcsa.dot.gov/">https://www.fmcsa.dot.gov/</a></p>
 	  <p>Indiana BMV <a href="http://www.in.gov/bmv/index.htm">http://www.in.gov/bmv/index.htm</a></p>
 	  <p>TSA <a href="https://www.tsa.gov/">https://www.tsa.gov/</a></p>
