--- a/intermodal.html
+++ b/intermodal.html
@@ -21,7 +21,7 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Drayage, Intermodal, Maritime, and Transportation (88):</h3>
+          <h3>Drayage, Intermodal, Maritime, and Transportation (95):</h3>
           <ul>
           <li><a href="intermodal.html#Associations">Associations</a> (4)</li>
           <li><a href="intermodal.html#Blogs">Blogs and News</a> (4)</li>
@@ -35,6 +35,8 @@
           <li><a href="intermodal.html#Classifieds">Truck Classifieds and Dealers</a> (14)</li> 
           <li><a href="intermodal.html#GOV">US Government Sites</a> (4)</li>
           <li><a href="intermodal.html#Drayage">US Midwest Drayage Companies</a> (11)</li>
+          <li><a href="intermodal.html#DryBulk">US Midwest Dry Bulk Companies</a> (1)</li>
+          <li><a href="intermodal.html#Tanker">US Midwest Tanker and Oil Companies</a> (6)</li>
           </ul>
           
 	  <br /><br /><br /><br />
@@ -180,6 +182,20 @@
 	  
 	  <br /><br /><br /><br />
 	  
+	  <h3><a id="DryBulk">US Midwest Dry Bulk Companies (1):</h3>
+	  <p>Bulkmatic <a href="http://www.bulkmatic.com/">http://www.bulkmatic.com/</a></p>
+	  
+	  <br /><br /><br /><br />
+	  
+	  <h3><a id="Tanker">US Midwest Tanker and Oil Companies (6):</h3>
+	  <p>Good Oil Company <a href="http://goodoilcompany.com/">http://goodoilcompany.com/</a></p>
+	  <p>Kenan Advantage Group <a href="https://www.thekag.com/">https://www.thekag.com/</a></p>
+	  <p>Mansfield Energy Corp. <a href="http://mansfield.energy/">http://mansfield.energy/</a></p>
+	  <p>Quality Carriers Inc. <a href="https://www.qualitycarriersinc.com/">https://www.qualitycarriersinc.com/</a></p>
+	  <p>Schiber <a href="https://www.schiber.com/">https://www.schiber.com/</a></p>
+	  <p>Trimac <a href="https://www.trimac.com/">https://www.trimac.com/</a></p>
+	  
+	  <br /><br /><br /><br />
 
 	     </div>
 	       <div id="favorites">
