removed dead links && added new links

--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,7 @@
           <br />
           <ul>
           <li>Electronic Mail: UNIX.S3C (at) gmail (dot) com</li>
+          <li>Source Code Repository: <a href="https://github.com/monsterb">https://github.com/monsterb/</a></li>
           </ul>
 	  <br />
 	  
