--- a/racing-simulators.html
+++ b/racing-simulators.html
@@ -8,7 +8,7 @@
   	<link href="monsterborg.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
 	<link rel="shortcut icon" href="favicon.png" />
-   <title>monsterb | daemons, gnus, and penguins. Oh my!</title>
+   <title>monsterb | daemons, gnus, and penguins. Oh my! | Racing Simulators</title>
   </head>
    <body>
     <div id="container">
@@ -21,25 +21,18 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Main Menu (585):</h3>
-          <ul>
-          <li><a href="conferences.html">Conferences</a> (45)</li>
-          <li><a href="bsd-flavors.html">BSD Flavors</a> (14)</li>
-          <li><a href="cybersecurity.html">Ethical Hacking, Forensics, Infosec, PenTesting</a> (33)</li>
-          <li><a href="firewalls.html">Firewalls: Distributions and Front-ends</a> (10)</li>
-          <li><a href="illumosdistros.html">Illumos Distributions: Desktop and Server</a> (6)</li>
-          <li><a href="linuxdistros-anonymity.html">Linux Distributions: Anonymity and Privacy</a> (5)</li>
-          <li><a href="linuxdistros-desktop-server.html">Linux Distributions: Desktop and Server</a> (10)</li>
-          <li><a href="linuxdistros-infosec.html">Linux Distributions: Information Security</a> (15)</li>
-          <li><a href="magazines.html">Magazines</a> (24)</li>
-          <li><a href="moble-os.html">Moble Operating Systems</a> (4)</li>
-          <li><a href="podcasts.html">Netcasts, Oggcasts, Podcasts, Webcasts</a> (98)</li>
-          <li><a href="non-foss.html">NON-FOSS Links</a> (187)</li>
-          <li><a href="online-courses.html">Online Courses</a> (45)</li>
-          <li><a href="blogs.html">Open Source Tech Blogs, Howtos, Guides, and Tutorials</a> (7)</li>
-          <li><a href="python-programming.html">Python Programming</a> (57)</li>
-          <li><a href="video-gaming.html">Video Gaming: Linux</a> (27)</li>
-          </ul>
+          <h3>Racing Simulators (10):</h3>
+          <p>Assetto Corsa <a href="http://www.assettocorsa.net/en/">http://www.assettocorsa.net/en/</a></p>
+          <p>iRacing <a href="http://www.iracing.com/">http://www.iracing.com/</a></p>
+          <p>Live For Speed <a href="https://www.lfs.net/">https://www.lfs.net/</a></p>
+          <p>Project Cars <a href="http://www.wmdportal.com/projects/cars/">http://www.wmdportal.com/projects/cars/</a></p>
+          <p>RaceRoom <a href="http://www.raceroom.net/">http://www.raceroom.net/</a></p>
+          <p>Reiza Studios <a href="http://www.reizastudios.com/">http://www.reizastudios.com/</a></p>
+          <p>rFactor <a href="http://rfactor.net/">http://rfactor.net/</a></p>
+          <p>Sector3 Studios <a href="http://www.sector3studios.com/">http://www.sector3studios.com/</a></p>
+          <p>Sim Factory <a href="http://thesimfactory.com/">http://thesimfactory.com/</a></p>
+          <p>Simraceway <a href="https://www.simraceway.com/">https://www.simraceway.com/</a></p>
+          
 	  <br />
 	  
 
