--- a/ocp/contact.html
+++ b/ocp/contact.html
@@ -28,6 +28,7 @@
 	  <li>Electronic Mail: UNIX.S3C (at) gmail (dot) com</li>
 	  <li>Gaming: <a href="http://steamcommunity.com/groups/oggcastplanet">Steam Group</a>
 	  <li>IRC: irc.freenode.net <a href="http://webchat.freenode.net/?channels=oggcastplanet">#oggcastplanet</a></li>
+      <li>Source Code Repository: <a href="https://github.com/monsterb">https://github.com/monsterb/</a></li>
 	  </ul>
 	  </div>
 	      </div>
