removed dead links && added new links

--- a/online-courses.html
+++ b/online-courses.html
@@ -21,10 +21,11 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Online Courses (45):</h3>
+          <h3>Online Courses (46):</h3>
           
 	  <br />
           <p>Alison <a href="https://alison.com/">https://alison.com/</a></p>
+          <p>Bento <a href="https://bento.io/">https://bento.io/</a> web dev</p>
           <p>Code Avengers <a href="https://www.codeavengers.com/">https://www.codeavengers.com/</a> code</p>
           <p>CodeCombat <a href="http://codecombat.com/">http://codecombat.com/</a> learn by gaming</p>
           <p>Code School <a href="https://www.codeschool.com/">https://www.codeschool.com/</a> code</p>
