--- a/python-programming.html
+++ b/python-programming.html
@@ -46,7 +46,7 @@
           <p><a href="http://python.swaroopch.com/">A Byte of Python</a> is a free book on programming using the Python language. It serves as a tutorial or guide to the Python language for a 
           beginner audience. If all you know about computers is how to save text files, then this is the book for you.</p>
           <br /><br />
-          <p><a href="https://archive.org/details/AutomateTheBoringStuffWithPython">Automate The Boring Stuff With Python</a> Practical Programming for Total Beginners by Al Sweigart</p>
+          <p><a href="https://automatetheboringstuff.com/">Automate The Boring Stuff With Python</a> Practical Programming for Total Beginners by Al Sweigart</p>
           <br /><br />
           <p><a href="https://archive.org/details/pdfy-rJnW-pPgiHK61dok">Black Hat Python, Python Programming for Hackers</a> you'll explore the darker side of Python's capabilities—writing network 
           sniffers, manipulating packets, infecting virtual machines, creating stealthy trojans, and more.</p>
@@ -71,8 +71,8 @@
           <p><a href="http://inventwithpython.com/chapters/">Invent Your Own Computer Games with Python</a> This book teaches you how to program by making video games. Once you learn how the games in 
           this book work, you’ll be able to create your own games. All you’ll need is a computer, some software called the Python interpreter, and this book.</p>
           <br /><br />
-          <p><a href="https://archive.org/details/LearningPython5thEdition-MarkLutz9781449355739">Learning Python, 5th Edition</a> - Get a comprehensive, in-depth introduction to the core Python language 
-          with this hands-on book. Based on author Mark Lutz’s popular training course, this updated fifth edition will help you quickly write efficient, high-quality code with Python. It’s an ideal way 
+          <p><a href="https://archive.org/details/LearningPython">Learning Python, 4th Edition</a> - Get a comprehensive, in-depth introduction to the core Python language 
+          with this hands-on book. Based on author Mark Lutz’s popular training course, this updated forth edition will help you quickly write efficient, high-quality code with Python. It’s an ideal way 
           to begin, whether you’re new to programming or a professional developer versed in other languages.</p>
           <br /><br />
           <p><a href="http://learnpythonthehardway.org/book/">Learn Python the Hard Way</a> (Python 2) This simple book by Zed Shaw is meant to get you started in programming. The title says it's the hard way to learn to 
