--- a/python-programming.html
+++ b/python-programming.html
@@ -21,11 +21,11 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Python Programming (57):</h3>
+          <h3>Python Programming (58):</h3>
           <br />
           <ul>
           <li><a href="python-programming.html#Blogs">Blogs, Info, News</a> (3)</li>
-          <li><a href="python-programming.html#eBooks">Free eBooks</a> (21)</li>
+          <li><a href="python-programming.html#eBooks">Free eBooks</a> (22)</li>
           <li><a href="python-programming.html#IDE">(IDE) Integrated Development Environments</a> (3)</li>
           <li><a href="python-programming.html#IDE-Online">(IDE) Online Editors</a> (4)</li>
           <li><a href="python-programming.html#Learn">Learn Python Programming</a> * (19)</li>
@@ -41,7 +41,7 @@
           
           <br /><br /><br /><br />
           
-          <h3><a id="eBooks">Free eBooks</a> (21):</h3>
+          <h3><a id="eBooks">Free eBooks</a> (22):</h3>
           <br />
           <p><a href="http://python.swaroopch.com/">A Byte of Python</a> is a free book on programming using the Python language. It serves as a tutorial or guide to the Python language for a 
           beginner audience. If all you know about computers is how to save text files, then this is the book for you.</p>
@@ -103,6 +103,8 @@
           <br /><br />
           <p><a href="https://archive.org/details/PythonProgrammingForTheAbsoluteBeginner3rdEdition">Python Programming For The Absolute Beginner, 3rd Edition</a> - If you are new to programming with 
           Python and are looking for a solid introduction, this is the book for you.</p>
+          <br /><br />
+          <p>"<a href="http://www.spronck.net/pythonbook/">The Coder's Apprentice</a>" is a course book, written by Pieter Spronck, that is aimed at teaching Python 3 to students and teenagers who are completely new to programming. Contrary to many of the other books that teach Python programming, this book assumes no previous knowledge of programming on the part of the students, and contains numerous exercises that allow students to train their programming skills.</p>
           <br /><br />
           <p><a href="http://docs.python-guide.org/en/latest/">The Hitchhiker’s Guide to Python</a> - This opinionated guide exists to provide both novice and expert Python developers a best practice 
           handbook to the installation, configuration, and usage of Python on a daily basis.</p>
