--- a/about.html
+++ b/about.html
@@ -23,9 +23,9 @@
 	      <div id="main">
           <h3>About:</h3>
           <br />
-          <p>Welcome to monsterb | daemons, gnus, and penguins. Oh my! Formerly known as monsterb.org. This retro style site is a link portal dedicated to BSD, Cyber Security, Emulation, Ethical Hacking, FOSS, GNU, illumos, Information Security, Infosec, IT Security, Linux, Podcasting, Programming, Oggcasting, OpenSource, Scripting, Unix, Video Games, and beyond.</p>
+          <p>Welcome to monsterb | daemons, gnus, and penguins. Oh my! Formerly known as monsterb.org. This retro style site is a link portal dedicated to BSD, Cyber Security, Emulation, Ethical Hacking, FOSS, GNU, illumos, Information Security, Infosec, IT Security, Linux, Podcasting, Programming, Python, Oggcasting, OpenSource, Scripting, Unix, Video Games, and beyond.</p>
           <br />
-          <p>Site Updated: March 12, 2017</p>	  
+          <p>Site Updated: March 19, 2017</p>	  
 			 <br />
 
 	     </div>
