--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Main Menu (592):</h3>
+          <h3>Main Menu (602):</h3>
+          <br />
           <ul>
           <li><a href="conferences.html">Conferences</a> (45)</li>
           <li><a href="bsd-flavors.html">BSD Flavors</a> (14)</li>
@@ -36,8 +37,9 @@
           <li><a href="podcasts.html">Netcasts, Oggcasts, Podcasts, Webcasts</a> (100)</li>
           <li><a href="non-foss.html">NON-FOSS Links</a> (187)</li>
           <li><a href="online-courses.html">Online Courses</a> (49)</li>
-          <li><a href="blogs.html">Open Source Tech Blogs, Howtos, Guides, and Tutorials</a> (7)</li>
-          <li><a href="python-programming.html">Python Programming</a> (58)</li>
+          <li><a href="blogs.html">Open Source Tech Blogs, Howtos, Guides, and Tutorials</a> (8)</li>
+          <li><a href="python-programming.html">Python Programming</a> (63)</li>
+          <li><a href="robotics.html">Robotics</a> (4)</li>
           <li><a href="video-gaming.html">Video Gaming: Linux</a> (27)</li>
           </ul>
 	  <br />
