--- a/bsd-flavors.html
+++ b/bsd-flavors.html
@@ -21,42 +21,56 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>BSD Flavors (14):</h3>
+          <h3>BSD Flavors (13):</h3>
           <br />
-          <p><a href="http://bsdrp.net/">BSD Router Project</a> (BSDRP) is an embedded free and open source router distribution based on FreeBSD with Quagga and Bird.</p>
+<p><a href="http://bsdrp.net/">BSD Router Project</a> (BSDRP) is an embedded free and open source router distribution based on FreeBSD with Quagga and Bird.</p>
+
 <br /><br />
-          <p><a href="http://www.desktopbsd.net/">DesktopBSD</a> is an open source operating system that aims at being a stable and powerful operating system for desktop users. Combining the stability of FreeBSD, the usability and functionality of KDE and the simplicity of specially developed 
-          software to provide a system that's easy to use and install, in a project with two primary goals - security and usability.</p>
+
+<p><a href="http://www.desktopbsd.net/">DesktopBSD</a> is an open source operating system that aims at being a stable and powerful operating system for desktop users. Combining the stability of FreeBSD, the usability and functionality of KDE and the simplicity of specially developed software to provide a system that's easy to use and install, in a project with two primary goals - security and usability.</p>
+
 <br /><br />
-          <p><a href="https://www.dragonflybsd.org/">DragonFly BSD</a> is a free and open source Unix-like operating system created as a fork of FreeBSD 4.8. DragonFly BSD supports the HAMMER file system. The HAMMER file system was developed specifically for DragonFly BSD to provide a feature-rich yet better 
-          designed analogue of the increasingly popular ZFS. HAMMER supports configurable file system history, snapshots, checksumming, data deduplication and other features typical for file systems of its kind.</p>
+
+<p><a href="https://www.dragonflybsd.org/">DragonFly BSD</a> is a free and open source Unix-like operating system created as a fork of FreeBSD 4.8. DragonFly BSD supports the HAMMER file system. The HAMMER file system was developed specifically for DragonFly BSD to provide a feature-rich yet better designed analogue of the increasingly popular ZFS. HAMMER supports configurable file system history, snapshots, checksumming, data deduplication and other features typical for file systems of its kind.</p>
+
 <br /><br />
-          <p><a href="https://www.freebsd.org/">FreeBSD</a> is an advanced computer operating system used to power modern servers, desktops and embedded platforms. A large community has continually developed it for more than thirty years. Its advanced networking, security and storage features 
-          have made FreeBSD the platform of choice for many of the busiest web sites and most pervasive embedded networking and storage devices.</p>
+
+<p><a href="https://www.freebsd.org/">FreeBSD</a> is an advanced computer operating system used to power modern servers, desktops and embedded platforms. A large community has continually developed it for more than thirty years. Its advanced networking, security and storage features have made FreeBSD the platform of choice for many of the busiest web sites and most pervasive embedded networking and storage devices.</p>
+
 <br /><br />
-	  <p><a href="http://www.freenas.org/">FreeNAS</a> is a free and open-source software network-attached storage (NAS) system based on FreeBSD and the OpenZFS file system.</p>
+
+p><a href="http://www.freenas.org/">FreeNAS</a> is a free and open-source software network-attached storage (NAS) system based on FreeBSD and the OpenZFS file system.</p>
+
 <br /><br />
-	  <p><a href="http://www.ghostbsd.org/">GhostBSD</a> is a user-friendly BSD operating system built on top of FreeBSD. FreeBSD is known to be a solid, powerful, secure and stable server operating system, providing an excellent base for a desktop operating system.</p>
+
+<p><a href="http://www.ghostbsd.org/">GhostBSD</a> is a user-friendly BSD operating system built on top of FreeBSD. FreeBSD is known to be a solid, powerful, secure and stable server operating system, providing an excellent base for a desktop operating system.</p>
+
 <br /><br />
-	  <p><a href="http://www.midnightbsd.org/">MidnightBSD</a> is a new BSD-derived operating system developed with desktop users in mind. It includes all the software you'd expect for your daily tasks — email, web browsing, word processing, gaming, and much more.</p>
+
+<p><a href="http://www.midnightbsd.org/">MidnightBSD</a> is a new BSD-derived operating system developed with desktop users in mind. It includes all the software you'd expect for your daily tasks — email, web browsing, word processing, gaming, and much more.</p>
+
 <br /><br />
-     <p><a href="http://www.nas4free.org/">NAS4Free</a> is a network-attached storage (NAS) server software with a dedicated management web interface (written in PHP).</p>
-	 <br /><br />
-	  <p><a href="https://www.netbsd.org/">NetBSD</a> is a free, fast, secure, and highly portable Unix-like Open Source operating system. It is available for a wide range of platforms, from large-scale servers and powerful desktop systems to handheld and embedded devices. Its 
-	  clean design and advanced features make it excellent for use in both production and research environments, and the source code is freely available under a business-friendly license. NetBSD is developed and supported by a large and vivid 
-	  international community.</p>
+
+<p><a href="http://www.nas4free.org/">NAS4Free</a> is a network-attached storage (NAS) server software with a dedicated management web interface (written in PHP).</p>
 <br /><br />
-	  <p><a href="http://www.openbsd.org/">OpenBSD</a> produces a <b>FREE</b>, multi-platform 4.4BSD-based UNIX-like operating system. Our efforts emphasize portability, standardization, correctness, proactive security and integrated cryptography. As an example of the effect OpenBSD 
-	  has, the popular OpenSSH software comes from OpenBSD.</p>
+
+<p><a href="https://www.netbsd.org/">NetBSD</a> is a free, fast, secure, and highly portable Unix-like Open Source operating system. It is available for a wide range of platforms, from large-scale servers and powerful desktop systems to handheld and embedded devices. Its 
+clean design and advanced features make it excellent for use in both production and research environments, and the source code is freely available under a business-friendly license. NetBSD is developed and supported by a large and vivid international community.</p>
+
 <br /><br />
-	  <p><a href="https://opnsense.org/">OPNsense</a> is an open source, easy-to-use and easy-to-build FreeBSD based firewall and routing platform.</p>
+
+<p><a href="http://www.openbsd.org/">OpenBSD</a> produces a <b>FREE</b>, multi-platform 4.4BSD-based UNIX-like operating system. Our efforts emphasize portability, standardization, correctness, proactive security and integrated cryptography. As an example of the effect OpenBSD has, the popular OpenSSH software comes from OpenBSD.</p>
 <br /><br />
-	  <p><a href="http://www.pcbsd.org/">PC-BSD</a> is a desktop operating system based on FreeBSD. Rather than having the user build their own environment from the base operating system, PC-BSD aims to make the FreeBSD experience easy and achievable for the average "casual" computer 
-	  user. Whether you need quick access to e-mail or a free and Open Source gaming system, PC-BSD is the desktop for you!</p>
+
+<p><a href="https://opnsense.org/">OPNsense</a> is an open source, easy-to-use and easy-to-build FreeBSD based firewall and routing platform.</p>
+
 <br /><br />
-	  <p><a href="https://www.pfsense.org/">pfSense</a> is an open source firewall/router computer software distribution based on FreeBSD.</p>
-	  <br /><br />
-	  <p><a href="https://www.trueos.org/">TrueOS</a> (based of FreeBSD) is designed from the ground up for ease of use. All the packages needed for a fully functional desktop are included out of the box, and the graphical installer makes it simple to set up a new TrueOS® installation. </p>
+
+<p><a href="https://www.pfsense.org/">pfSense</a> is an open source firewall/router computer software distribution based on FreeBSD.</p>
+
+<br /><br />
+
+<p><a href="https://www.trueos.org/">TrueOS</a> (formerly PC-BSD) is designed from the ground up for ease of use. All the packages needed for a fully functional desktop are included out of the box, and the graphical installer makes it simple to set up a new TrueOS® installation. TrueOS is based on FreeBSD-Current.</p>
 
 
           
